# grafy

./: CMakeLists.txt  README.md  VypocetKostier.cpp  VypocetKostier.h  biregularParalel  biregularSerial  collectingBiregularGraphs.cpp  collectingBiregularGraphs.h  collectingRegularGraphs.cpp  collectingRegularGraphs.h  generalGraphs.cpp  generalGraphs.h  generovanie.cpp  generovanie.h  generovanieParalelneSpracovanie  generovanieSerialSpracovanie  isomorphismAHU.cpp  isomorphismAHU.h  izomorfizmus.cpp  izomorfizmus.h  main.cpp  mainBiregularGraphs.cpp  mainBiregularne.cpp  mainCollectingBiregularGraphs.cpp  mainCollectingRegularGraphs.cpp  mainGeneralGraphs.cpp  mainGenerovanie.cpp  mainRegularGraphs.cpp  mainRegularne.cpp  mainRozdelovac.cpp  mainTriedy.cpp  mainVseobecne.cpp  mainZber.cpp  mainZberBiregularne.cpp  mainZberRegularne.cpp  mainZberTriedy.cpp  paralelneBiregularneGenerovanie  paralelneGenerovanieSerialSpracovanie  paralelneGenerovanieSpracovanie  parametersCheck  (+39 more)
